calendrier non recurent mais  fonctionnel

--- a/templates/booking/new.html.twig
+++ b/templates/booking/new.html.twig
@@ -3,15 +3,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Réserver le cours: {{ courseInstance.course.name }}</h1>
+    <h1>Réserver le cours: {{ course.name }}</h1>
 
-    <p>Description: {{ courseInstance.course.description }}</p>
-    <p>Date: {{ courseInstance.startTime|date('d/m/Y H:i') }} - {{ courseInstance.endTime|date('H:i') }}</p>
+    <p>Date: {{ course.startTime|date('d/m/Y H:i') }} - {{ course.endTime|date('H:i') }}</p>
 
-    <form action="{{ path('booking_new', { 'courseInstanceId': courseInstance.id }) }}" method="post">
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-primary">Confirmer la réservation</button>
-        {{ form_end(form) }}
-    </form>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button type="submit" class="btn btn-primary">Confirmer la réservation</button>
+    {{ form_end(form) }}
 {% endblock %}
