--- a/templates/course/new.html.twig
+++ b/templates/course/new.html.twig
@@ -3,9 +3,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>New Course</h1>
+    <h1>Créer un nouveau cours</h1>
+
     {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">Save</button>
+        {{ form_row(form.name) }}
+        {{ form_row(form.startTime) }}
+        {{ form_row(form.endTime) }}
+        {{ form_row(form.capacity) }}
+        {{ form_row(form.isRecurrent) }}
+        {{ form_row(form.recurrenceDuration) }}
+        <button class="btn btn-primary">Enregistrer</button>
     {{ form_end(form) }}
 {% endblock %}
