--- a/templates/course/new.html.twig
+++ b/templates/course/new.html.twig
@@ -9,6 +9,7 @@
         {{ form_row(form.name) }}
         {{ form_row(form.startTime) }}
         {{ form_row(form.endTime) }}
+        {{ form_row(form.price) }}
         {{ form_row(form.capacity) }}
         {{ form_row(form.isRecurrent) }}
         {{ form_row(form.recurrenceDuration) }}
