--- a/templates/user/subscription.html.twig
+++ b/templates/user/subscription.html.twig
@@ -1,16 +1,29 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1>Mon Forfait</h1>
+<h1>Mes Forfaits</h1>
 
-{% if subscription %}
-    <p>Forfait: {{ subscription.forfait }}</p>
-    <p>Nombre de cours restants: {{ subscription.remainingCourses }}</p>
-    <p>Date d'expiration: {{ subscription.expiryDate|date('d-m-Y') }}</p>
-    <p>Mode de paiement: {{ subscription.paymentMode }}</p>
-    <a href="{{ path('subscription_new', {'courseId': 1}) }}" class="btn btn-primary">Acheter plus de cours</a>
+{% if subscriptions is defined and subscriptions|length > 0 %}
+    {% for subscription in subscriptions %}
+        <h2>
+            {% if subscription.forfait starts with 'pole_' %}
+                Pole Dance
+            {% elseif subscription.forfait starts with 'souplesse_' %}
+                Souplesse ou Renfo
+            {% else %}
+                {{ subscription.forfait }}
+            {% endif %}
+        </h2>
+        <p>Nombre de cours restants: {{ subscription.remainingCourses }}</p>
+        <p>Date d'expiration: {{ subscription.expiryDate|date('d-m-Y') }}</p>
+        <p>Mode de paiement: {{ subscription.paymentMode }}</p>
+    {% endfor %}
 {% else %}
     <p>Vous n'avez pas de forfait actif.</p>
-    <a href="{{ path('subscription_new', {'courseId': 1}) }}" class="btn btn-primary">Acheter un forfait</a>
 {% endif %}
+
+<a href="{{ path('subscription_new', {'courseId': 1}) }}" class="btn btn-primary">Acheter plus de cours</a>
+<a href="{{ path('subscription_new', {'courseId': 2}) }}" class="btn btn-primary">Acheter un forfait Souplesse ou Renfo</a>
+<br>
+<a href="{{ path('app_calendar') }}">Réserver</a>
 {% endblock %}
