rectification du courseId pour les reservations

--- a/templates/user/subscription.html.twig
+++ b/templates/user/subscription.html.twig
@@ -22,7 +22,20 @@
     <p>Vous n'avez pas de forfait actif.</p>
 {% endif %}
 
-<a href="{{ path('subscription_new', {'courseId': 1}) }}" class="btn btn-primary">Acheter plus de cours</a>
+<!-- Formulaire pour choisir le type de forfait -->
+<h2>Choisissez un forfait à acheter :</h2>
+<form action="{{ path('subscription_new') }}" method="get">
+    <div class="form-group">
+        <label for="courseId">Type de cours :</label>
+        <select name="courseId" id="courseId" class="form-control">
+            <option value="1">Pole Dance</option>
+            <option value="2">Souplesse ou Renfo</option>
+            <!-- Ajoutez d'autres options de cours ici si nécessaire -->
+        </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Acheter plus de cours</button>
+</form>
+
 <br>
 <a href="{{ path('app_calendar') }}">Réserver</a>
 {% endblock %}
