--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,11 +1,9 @@
-{# templates/home/index.html.twig #}
-
 {% extends 'base.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
     <h1>Bienvenue sur la page d'accueil</h1>
-        <a href="{{ path('app_calendar') }}">
+        <a href="{{ path('calendar') }}">
         Réserver</a>
 {% endblock %}
