--- a/templates/plan/edit.html.twig
+++ b/templates/plan/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Edit Course</h1>
+    <h1>Modifier le forfait</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">Save</button>
+    <button class="btn btn-primary">Enregistrer</button>
     {{ form_end(form) }}
 {% endblock %}
