--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,3 @@
-{# templates/registration/register.html.twig #}
-
 {% extends 'base.html.twig' %}
 
 {% block title %}Inscription{% endblock %}
@@ -13,7 +11,7 @@
 
         <button type="submit" class="btn btn-primary">S'inscrire</button>
         <br>
-            <a href="{{ path('app_login') }}">Déjà iscrit ?
+            <a href="{{ path('app_login') }}">Déjà inscrit ?
             <br>
             Connecte-toi !
             </a>
