--- a/templates/user/subscription.html.twig
+++ b/templates/user/subscription.html.twig
@@ -1,26 +1,26 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1>Mes Forfaits</h1>
+    <h1>Mes Forfaits</h1>
 
-{% if subscriptions is defined and subscriptions|length > 0 %}
-    {% for subscription in subscriptions %}
-        <h2>
-            {% if subscription.forfait starts with 'pole_' %}
-                Pole Dance
-            {% elseif subscription.forfait starts with 'souplesse_' %}
-                Souplesse ou Renfo
-            {% else %}
-                {{ subscription.forfait }}
-            {% endif %}
-        </h2>
-        <p>Nombre de cours restants: {{ subscription.remainingCourses }}</p>
-        <p>Date d'expiration: {{ subscription.expiryDate|date('d-m-Y') }}</p>
-        <p>Mode de paiement: {{ subscription.paymentMode }}</p>
-    {% endfor %}
-{% else %}
-    <p>Vous n'avez pas de forfait actif.</p>
-{% endif %}
-<br>
-<a href="{{ path('app_calendar') }}">Réserver</a>
+    {% if subscriptions is defined and subscriptions|length > 0 %}
+        {% for subscription in subscriptions %}
+            <h2>
+                {% if subscription.plan.name starts with 'Pole Dance' %}
+                    Pole Dance
+                {% elseif subscription.plan.name starts with 'Souplesse' %}
+                    Souplesse ou Renfo
+                {% else %}
+                    {{ subscription.plan.name }}
+                {% endif %}
+            </h2>
+            <p>Nombre de cours restants: {{ subscription.remainingCourses }}</p>
+            <p>Date d'expiration: {{ subscription.expiryDate|date('d-m-Y') }}</p>
+            <p>Mode de paiement: {{ subscription.paymentMode }}</p>
+        {% endfor %}
+    {% else %}
+        <p>Vous n'avez pas de forfait actif.</p>
+    {% endif %}
+    <br>
+    <a href="{{ path('app_calendar') }}">Réserver</a>
 {% endblock %}
