--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Bienvenue!{% endblock %}</title>
-    <link rel="stylesheet" href="{{ asset('styles/style.css') }}">
+    <title>
+        {% block title %}Bienvenue !{% endblock %}
+    </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
@@ -11,15 +13,23 @@
         <!-- Votre menu de navigation -->
     </nav>
 
-    {% for message in app.flashes('error') %}
-        <div class="flash-error">
-            {{ message }}
-        </div>
-    {% endfor %}
+    <div class="container mt-4">
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
 
     {% block body %}{% endblock %}
-    
-    {% block javascripts %}
-    {% endblock %}
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    {% block javascripts %}{% endblock %}
 </body>
 </html>
