--- a/templates/booking/new.html.twig
+++ b/templates/booking/new.html.twig
@@ -1,46 +1,50 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="container mt-5">
     <h1>Réserver le cours : {{ course.name }}</h1>
 
     {{ form_start(form) }}
-    <div class="form-group">
-        {{ form_row(form.isRecurrent) }}
-        <div id="num-occurrences-container" style="display: none;">
-            {{ form_row(form.numOccurrences) }}
-            <button type="button" class="btn btn-secondary" id="max-occurrences-button">Max ({{ remaining_courses }})</button>
-        </div>
+    <div class="form-group form-check">
+        {{ form_widget(form.isRecurrent, {'attr': {'class': 'form-check-input js-recurrent-checkbox'}}) }}
+        {{ form_label(form.isRecurrent, null, {'label_attr': {'class': 'form-check-label'}}) }}
+    </div>
+    <div id="num-occurrences-container" class="form-group" style="display: none;">
+        {{ form_label(form.numOccurrences, null, {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(form.numOccurrences, {'attr': {'class': 'form-control js-num-occurrences'}}) }}
+        <button type="button" class="btn btn-secondary mt-2" id="max-occurrences-button">Max ({{ remaining_courses }})</button>
     </div>
     {{ form_rest(form) }}
     <button type="submit" class="btn btn-primary">Réserver</button>
     {{ form_end(form) }}
+</div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const recurrentCheckbox = document.querySelector('.js-recurrent-checkbox');
-            const numOccurrencesContainer = document.getElementById('num-occurrences-container');
-            const numOccurrencesInput = document.querySelector('.js-num-occurrences');
-            const maxOccurrencesButton = document.getElementById('max-occurrences-button');
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const recurrentCheckbox = document.querySelector('.js-recurrent-checkbox');
+        const numOccurrencesContainer = document.getElementById('num-occurrences-container');
+        const numOccurrencesInput = document.querySelector('.js-num-occurrences');
+        const maxOccurrencesButton = document.getElementById('max-occurrences-button');
 
-            recurrentCheckbox.addEventListener('change', function () {
-                if (recurrentCheckbox.checked) {
-                    numOccurrencesContainer.style.display = 'block';
-                    numOccurrencesInput.required = true;
-                } else {
-                    numOccurrencesContainer.style.display = 'none';
-                    numOccurrencesInput.required = false;
-                    numOccurrencesInput.value = '';
-                }
-            });
-
-            maxOccurrencesButton.addEventListener('click', function () {
-                numOccurrencesInput.value = {{ remaining_courses }};
-            });
-
+        recurrentCheckbox.addEventListener('change', function () {
             if (recurrentCheckbox.checked) {
                 numOccurrencesContainer.style.display = 'block';
                 numOccurrencesInput.required = true;
+            } else {
+                numOccurrencesContainer.style.display = 'none';
+                numOccurrencesInput.required = false;
+                numOccurrencesInput.value = '';
             }
         });
-    </script>
+
+        maxOccurrencesButton.addEventListener('click', function () {
+            numOccurrencesInput.value = {{ remaining_courses }};
+        });
+
+        if (recurrentCheckbox.checked) {
+            numOccurrencesContainer.style.display = 'block';
+            numOccurrencesInput.required = true;
+        }
+    });
+</script>
 {% endblock %}
