--- a/templates/subscription/new.html.twig
+++ b/templates/subscription/new.html.twig
@@ -1,20 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<h1>Sélectionner votre forfait</h1>
+<div class="container">
+    <h1>Sélectionner votre forfait</h1>
 
-	{{ form_start(form) }}
-	<div class="form-group">
-		{{ form_label(form.plan) }}
-		{{ form_widget(form.plan) }}
-	</div>
+    {{ form_start(form) }}
+    <div class="form-group">
+        {{ form_label(form.plan, null, {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(form.plan, {'attr': {'class': 'form-control'}}) }}
+    </div>
 
-	<div class="form-group">
-		{{ form_label(form.promoCode) }}
-		{{ form_widget(form.promoCode, {'attr': {'class': 'form-control'}}) }}
-	</div>
-	{{ form_rest(form) }}
-	<button type="submit" class="btn btn-primary">Réserver et payer</button>
-	{{ form_end(form) }}
-	<a href="{{ path('plan_new') }}">Ajouter un nouveau forfait</a>
+    <div class="form-group">
+        {{ form_label(form.promoCode, null, {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(form.promoCode, {'attr': {'class': 'form-control'}}) }}
+    </div>
+
+    {{ form_rest(form) }}
+
+    <button type="submit" class="btn btn-primary">Réserver et payer</button>
+    {{ form_end(form) }}
+
+    <div class="mt-3">
+        <a href="{{ path('plan_new') }}" class="btn btn-secondary">Ajouter un nouveau forfait</a>
+    </div>
+</div>
 {% endblock %}
