--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,17 +3,33 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <h1>Inscription</h1>
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-
-        <button type="submit" class="btn btn-primary">S'inscrire</button>
-        <br>
-            <a href="{{ path('app_login') }}">Déjà inscrit ?
-            <br>
-            Connecte-toi !
-            </a>
-    {{ form_end(registrationForm) }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="card-title">Inscription</h1>
+                    </div>
+                    <div class="card-body">
+                        {{ form_start(registrationForm) }}
+                        <div class="form-group">
+                            {{ form_label(registrationForm.email) }}
+                            {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+                            {{ form_errors(registrationForm.email) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_label(registrationForm.plainPassword) }}
+                            {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+                            {{ form_errors(registrationForm.plainPassword) }}
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
+                        {{ form_end(registrationForm) }}
+                    </div>
+                </div>
+                <div class="text-center mt-3">
+                    <a href="{{ path('app_login') }}">Déjà inscrit ? Connecte-toi !</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
